# MCT-research

./: .schmit-state-sync-trigger  README.md  pyproject.toml
.github/: paired_protocol_bundle.part00  paired_protocol_bundle.part01  paired_protocol_bundle.part02  paired_protocol_bundle.part03  paired_protocol_bundle.part04  paired_protocol_bundle.part05  paired_protocol_bundle.part06  paired_protocol_bundle.part07  paired_protocol_bundle.part08  paired_protocol_bundle.tar.gz.b64  pull_request_template.md
benchmarks/: analytical_gap_models.md  executable_analytical_core.md  laurenti_baseline.md
first_principles/: README.md  convergence_ledger.csv  matrix_export_mapping.example.json  provenance.example.json  pseudopotential_matrix.csv
literature/: browder1972_optica_table_acquisition_contract.json  cdte_quadratic_invariant_prior_art.md  claim_matrix.md  greenough_palmer_1973_acquisition_contract.json  laurenti_reconstruction.md  ledger.md  search_log.md
patches/: qe76-epw61-r02-raw-vertex-export.patch  qe76-epw61-serial-epwread-epmatwp-allocation.patch
protocols/: hgcdte_paired_gap_acquisition_protocol.md  hgcdte_paired_gap_candidate_contact_questions.md  hgcdte_paired_gap_collaboration_feasibility.md  hgcdte_paired_gap_partner_outreach_packet.md
research/: active_program_state.md  active_progress.md  contribution_registry.md  portfolio_state.md  shared_foundations.md
tests/: test_absorption_edge_uncertainty_contract.py  test_absorption_observation_models.py  test_absorption_observation_source_recovery.py  test_acquire_cdte_pseudopotentials.py  (+237 more)
(+1153 files in other folders)
